style.css
/* ... */
#frame_enemies div{
	border-color:#ff5165;
}

.misc_row{
	margin-left:8px;
	height:26px;
	width:170px;
	line-height:24px;
	position: relative;
}

.misc_row_enemies{
	margin-left:8px;
	height:26px;
	width:170px;
	line-height:24px;
	position: relative;
}

.misc_input{
	position: absolute;
	right:0;
	top:2px;
	width:55px;
}

.misc_input_left{
	position: absolute;
	right:58px;
	top:2px;
	width:55px;
}

.misc_number{
	position: absolute;
	right:0;
	top:0;
}

.smallnuminput{
	width:36px;
}

.button{
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.button:hover{
	cursor:pointer;
}

.valign{
	vertical-align: middle;
}

.skill_picture{
	position: relative;
	top:5px;
	width:20px;
	height:20px;
	margin-right:6px;
}

.reset_button{
	display:inline-block;
	position:relative;
	border-radius:2px;
	font-size:12px;
	width:44px;
	text-align:center;
	line-height:22px;
	margin:0 4px 0 8px;
}

#reset_challenger{
	background-color: #7797ff;
}

#reset_challenger:hover{
	background-color: #ffffff;
	color:#4a6de2;
	font-weight:bold;
}

.reset_enemies{
	background-color: #ff5165;
}

.reset_enemies:hover{
	background-color: #ffffff;
	color:#d82a3e;
	font-weight:bold;
}

#enemies_bar_top{
	background-color: #ff5165;
	height:34px;
	font-size:19px;
	line-height:26px;
	position: relative;
	padding:0 10px;
}

#enemies_include{
	padding-left:6px;
	position:absolute;
	left:0;
	top:1px;
	height:150px;
}

#enemies_includeheader{
	position: relative;
	width:254px;
	text-align:center;
}

.includebuttons_row{
	position:relative;
	margin-top:1px;
	height:22px;
}

.wideincludebutton{
	text-align:center;
	font-size:12px;
	height:20px;
	line-height:20px;
	width:132px;
	display:inline-block;
	border-radius:2px;
}

.wideincludebutton + .wideincludebutton{
	margin-left:4px;
}

.thinincludebutton{
	height:20px;
	line-height:20px;
	text-align:center;
	width:64px;
	font-size:12px;
	display:inline-block;
	border-radius:2px;
}

.thinincludebutton + .thinincludebutton{
	margin-left:4px;
}

.notincluded{
	background-color: #444444;
}

.notincluded:hover{
	background-color: #888888;
}

.included{
	background-color: #ff5165;
}

.included:hover{
	background-color: #ffffff;
	color:#d82a3e;
	font-weight:bold;
}

.enemies_input{
	position:absolute;
	width:100px;
	left:112px;
	top:0;
}

#cl_enemylist{
	position:absolute;
	top:0;
	left:0;
	bottom:0;
	width:127px;
	background-color: #111111;
	border-right:2px solid #000000;
}

#cl_enemylist_list{
	position:absolute;
	top:24px;
	left:0;
	right:0;
	bottom:26px;
	overflow-y:auto;
}

.clbutton{
	position:absolute;
	left:15px;
	right:15px;
	border-radius:2px;
	height:16px;
	line-height:16px;
	font-size:11px;
	text-align:center;
	background-color: #222222;
}

.clbutton:hover{
	background-color: #888888;
	cursor:pointer;
	font-weight:bold;
}

#cl_removeall{
	bottom:4px;
}

#cl_addenemy{
	top:4px;
}

.cl_enemy{
	font-size:11px;
	position:relative;
	width:auto;
	margin: 3px;
	border-radius:2px;
	background-color: #444444;
	height:22px;
	line-height:22px;
	padding-left:4px;
}

.cl_enemy + .cl_enemy{
	margin-top:0;
}

.cl_enemy:hover{
	background-color: #888888;
}

.cl_destyled{
	background-color: #444444!important;
}

.cl_delete_enemy{
	text-align:center;
	position:absolute;
	right:2px;
	top:2px;
	bottom:2px;
	width:16px;
	line-height:16px;
	border-radius:2px;
	background-color: #222222;
	color:#ffffff;
	font-weight:normal;
}

.cl_delete_enemy:hover{
	cursor:pointer;
	background-color: #888888;
	font-weight:bold;
}

.clSelected{
	background-color: #ff5165!important;
}

.clSelected:hover{
	cursor:default;
}

.clSelected .cl_delete_enemy{
	background-color: #d82a3e;
}

.clSelected .cl_delete_enemy:hover{
	background-color: #ffffff;
	color:#d82a3e;
}

/*Rules/////////////////////////////////////////////*/
#frame_rules{
	border:2px solid #ffffff;
	background-color: #222222;
	border-radius:4px;
	margin-top:10px;
	text-align:left;
	height:138px;
	position:relative;
}

#rules_bar_top{
	text-align:center;
	height:34px;
	font-size:19px;
	font-family: "Merriweather",serif;
	line-height:34px;
	text-align:center;
	background-color: #000000;
	color:#ffffff;
}

#rules_turnorder{
	position:absolute;
	top:34px;
	left:6px;
	bottom:0;
	width:96px;
	border-right:2px solid #000000;
}

#turnorder_label{
	margin:0 auto;
	text-align:center;
	font-size:15px;
}

.turnorder_button_row{
	position:relative;
	margin-top:4px;
	height:22px;
}

.turnorder_button{
	font-size:12px;
	border-radius:2px;
	background-color: #444444;
	width:64px;
	text-align:center;
	height:22px;
	line-height:22px;
	display:inline-block;
}

.turnorder_button_add{	
	font-size:13px;
	border-radius:2px;
	background-color: #444444;
	width:22px;
	text-align:center;
	height:22px;
	line-height:22px;
	display:inline-block;
	margin-left:4px;
}

.turnorder_button:hover{
	background-color: #888888;
}

.turnorder_button_add:hover{
	background-color: #888888;
}

#turnorder_left{
	position:absolute;
	left:0;
	top:10px;
}

#turnorder_right{
	position:absolute;
	left:104px;
	top:6px;
}

.turn_label{
	position:relative;
	background-color: #333333;
	border-radius:2px;
	height:20px;
	line-height:20px;
	padding-left:6px;
	font-size:12px;
	width:126px;
}

.turn_delete{
	position:absolute;
	top:0;
	right:0;
	width:16px;
	height:16px;
	line-height:14px;
	margin:2px;
	border-radius:2px;
	background-color: #222222;
	text-align:center;
}

.turn_delete:hover{
	background-color: #888888;
}

.turn_label + .turn_label{
	margin-top:4px;
}

#rules_other{
	position:absolute;
	top:30px;
	bottom:0;
	font-size:13px;
	line-height:22px;
	left:248px;
	right:0;
	border-left:2px solid #000000;
}

#rules_inputs{
	position:absolute;
	left:8px;
	top:8px;
	width:330px;
}

.rules_inputs_line{
	position:relative;
	width:330px;
	height:22px;
}

.rules_inputs_lineright{
	position: absolute;
	top:0;
	right:0;
}

#rules_checks{
	position:absolute;
	right:0;
	top:8px;
	width:280px;
}
/* ... */

